# pokemanager

./: docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 98a71481b308_init6.py
app/: asgi.py  settings.py
app/api/: healthcheck.py
app/models/: __init__.py  associations.py  base.py  movement.py  pokemon.py  trainer.py
app/services/: pokeapi.py
app/services/tests/: test_pokeapi.py
test/: test_pokeservice.py
