[project]
name = "pokemanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "uvicorn>=0.41.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test", "app/services/tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
