[project]
name = "pokemanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.2",
    "ruff>=0.15.11",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.41.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test", "app/services/tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
